[package]
name = "ffi_helpers"
version = "0.2.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A crate to help make working with FFI easier."
repository = "https://github.com/Michael-F-Bryan/ffi_helpers"
license = "MIT"
readme = "README.md"
keywords = ["ffi", "error-handling", "foreign", "extern"]
categories = ["development-tools::ffi", "rust-patterns", "asynchronous"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1"
libc = "0.2.36"
failure_derive = "0.1"
