[package]
name = "ffi_helpers"
version = "0.3.0"
edition = "2021"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A crate to help make working with FFI easier."
repository = "https://github.com/Michael-F-Bryan/ffi_helpers"
license = "MIT"
readme = "README.md"
keywords = ["ffi", "error-handling", "foreign", "extern"]
categories = ["development-tools::ffi", "rust-patterns", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.44"
libc = "0.2.36"
thiserror = "1.0.30"
